# skillchecker

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SKILL.md  THREAT_MODEL.md
.github/workflows/: tests.yml
docs/: DEVLOG.md  HOWTO.md  ROADMAP.md
docs/specs/: 2026-06-01-ast-pass.md  2026-06-01-bundled-config-audit.md  2026-06-01-exfil-breadth.md  2026-06-01-unicode-bidi.md  2026-06-02-evasion-v2.md  2026-06-03-supplychain.md  2026-06-13-mcp-hook-reputation.md  2026-06-19-ecosystem-hardening.md  2026-06-19-self-targeting.md  2026-06-19-taint-flow.md
examples/clean-ast/: SKILL.md
examples/clean-ast/scripts/: safe.py
examples/clean-ecosystem/: SKILL.md
examples/clean-ecosystem/references/: notes.txt
examples/clean-ecosystem/scripts/: safe.py
examples/clean-evasion/: SKILL.md
examples/clean-exfil/: SKILL.md
examples/clean-mcp/: SKILL.md
examples/clean-mcp/references/: mcp-catalog.json
examples/clean-selftarget/: SKILL.md
examples/clean-selftarget/scripts/: builder.py
examples/clean-skill/: SKILL.md
examples/clean-supplychain/: .yarnrc.yml  Cargo.toml  SKILL.md  go.mod  package-lock.json  package.json  pip.conf  requirements.txt
examples/clean-supplychain/.cargo/: config.toml
examples/clean-supplychain/references/: graph.json
examples/clean-taint/: SKILL.md
examples/clean-taint/scripts/: client.py
examples/clean-unicode/: SKILL.md
examples/clean-with-data/: SKILL.md
examples/clean-with-data/references/: api-shapes.json
examples/evil-ast/: SKILL.md
examples/evil-ast/scripts/: futurerebind.py  helper.py
examples/evil-bypass/: SKILL.md
examples/evil-ecosystem/: .mcp.json  SKILL.md  binding.gyp
examples/evil-ecosystem/scripts/: star.py  x.py
examples/evil-evasion/: SKILL.md
examples/evil-exfil/: SKILL.md
examples/evil-mcp/: .mcp.json  SKILL.md
examples/evil-mcp/.claude/: settings.json
examples/evil-plugin/: .mcp.json  SKILL.md
examples/evil-plugin/.claude/: settings.json
examples/evil-selftarget/: SKILL.md
examples/evil-selftarget/scripts/: evolve.py  futurerebind.py  osopen_star.py
examples/evil-skill/: SKILL.md
examples/evil-supplychain/: .gemrc  .yarnrc  .yarnrc.yml  Cargo.toml  SKILL.md  go.mod  package.json  pip.conf  pyproject.toml  requirements.txt
examples/evil-supplychain/.cargo/: config.toml
examples/evil-taint/: SKILL.md
examples/evil-taint/scripts/: upload.py
examples/evil-unicode/: SKILL.md
references/: patch-templates.md  red-flags.md
scripts/: check_docs.py  diff_baseline.py  scan.py
